WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187920
Crash when loadViewIfRequired called while WKFullScreenViewController is being deallocated.
https://bugs.webkit.org/show_bug.cgi?id=187920
Summary
Crash when loadViewIfRequired called while WKFullScreenViewController is bein...
Jeremy Jones
Reported
2018-07-23 13:23:29 PDT
Crash when loadViewIfRequired called while WKFullScreenViewController is being deallocated.
Attachments
Patch
(3.04 KB, patch)
2018-07-23 13:36 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Jones
Comment 1
2018-07-23 13:24:28 PDT
rdar://problem/41324023
Jeremy Jones
Comment 2
2018-07-23 13:36:44 PDT
Created
attachment 345601
[details]
Patch
WebKit Commit Bot
Comment 3
2018-07-23 17:27:20 PDT
Comment on
attachment 345601
[details]
Patch Clearing flags on attachment: 345601 Committed
r234124
: <
https://trac.webkit.org/changeset/234124
>
WebKit Commit Bot
Comment 4
2018-07-23 17:27:21 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug