Crash when loadViewIfRequired called while WKFullScreenViewController is being deallocated. https://bugs.webkit.org/show_bug.cgi?id=187920 rdar://problem/41324023

Patch by Jeremy Jones <jeremyj@apple.com> on 2018-07-23
Reviewed by Eric Carlson.

Clear dangling weak-ref.
Prevent async playback state calls from instantiating the interface.
Release WKFullScreenViewController when it is no longer needed.

* UIProcess/ios/fullscreen/WKFullScreenViewController.mm:
(-[WKFullScreenViewController dealloc]):
(-[WKFullScreenViewController setPlaying:]):
(-[WKFullScreenViewController setAnimating:]):
* UIProcess/ios/fullscreen/WKFullScreenWindowControllerIOS.mm:
(-[WKFullScreenWindowController _completedExitFullScreen]):

Canonical link: https://commits.webkit.org/203103@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234124 268f45cc-cd09-0410-ab3c-d52691b4dbfc